Final linear reg pipeline

--- a/impute.ipynb
+++ b/impute.ipynb
@@ -2,11 +2,298 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "90903ddf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CO(GT)</th>\n",
+       "      <th>PT08.S1(CO)</th>\n",
+       "      <th>NMHC(GT)</th>\n",
+       "      <th>C6H6(GT)</th>\n",
+       "      <th>PT08.S2(NMHC)</th>\n",
+       "      <th>NOx(GT)</th>\n",
+       "      <th>PT08.S3(NOx)</th>\n",
+       "      <th>NO2(GT)</th>\n",
+       "      <th>PT08.S4(NO2)</th>\n",
+       "      <th>PT08.S5(O3)</th>\n",
+       "      <th>T</th>\n",
+       "      <th>RH</th>\n",
+       "      <th>AH</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2004-03-10 18:00:00</th>\n",
+       "      <td>2.6</td>\n",
+       "      <td>1360.0</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>1046.0</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>1692.0</td>\n",
+       "      <td>1268.0</td>\n",
+       "      <td>13.6</td>\n",
+       "      <td>48.9</td>\n",
+       "      <td>0.7578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-03-10 19:00:00</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1292.0</td>\n",
+       "      <td>112.000000</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>955.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>1174.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1559.0</td>\n",
+       "      <td>972.0</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>47.7</td>\n",
+       "      <td>0.7255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-03-10 20:00:00</th>\n",
+       "      <td>2.2</td>\n",
+       "      <td>1402.0</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>939.0</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>1140.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>1555.0</td>\n",
+       "      <td>1074.0</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0.7502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-03-10 21:00:00</th>\n",
+       "      <td>2.2</td>\n",
+       "      <td>1376.0</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>948.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>1092.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>1584.0</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.7867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-03-10 22:00:00</th>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1272.0</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>836.0</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>1205.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>1490.0</td>\n",
+       "      <td>1110.0</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>59.6</td>\n",
+       "      <td>0.7888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-04-04 10:00:00</th>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1314.0</td>\n",
+       "      <td>261.821642</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>1101.0</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>539.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>1374.0</td>\n",
+       "      <td>1729.0</td>\n",
+       "      <td>21.9</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>0.7568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-04-04 11:00:00</th>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1163.0</td>\n",
+       "      <td>264.415233</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>1027.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>604.0</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>1264.0</td>\n",
+       "      <td>1269.0</td>\n",
+       "      <td>24.3</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>0.7119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-04-04 12:00:00</th>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1142.0</td>\n",
+       "      <td>325.549398</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>293.0</td>\n",
+       "      <td>603.0</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>1241.0</td>\n",
+       "      <td>1092.0</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>0.6406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-04-04 13:00:00</th>\n",
+       "      <td>2.1</td>\n",
+       "      <td>1003.0</td>\n",
+       "      <td>315.044899</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>961.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>702.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>1041.0</td>\n",
+       "      <td>770.0</td>\n",
+       "      <td>28.3</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>0.5139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-04-04 14:00:00</th>\n",
+       "      <td>2.2</td>\n",
+       "      <td>1071.0</td>\n",
+       "      <td>336.854122</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>1047.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>1129.0</td>\n",
+       "      <td>816.0</td>\n",
+       "      <td>28.5</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>0.5028</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9357 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     CO(GT)  PT08.S1(CO)    NMHC(GT)  C6H6(GT)  PT08.S2(NMHC)  \\\n",
+       "Timestamp                                                                       \n",
+       "2004-03-10 18:00:00     2.6       1360.0  150.000000      11.9         1046.0   \n",
+       "2004-03-10 19:00:00     2.0       1292.0  112.000000       9.4          955.0   \n",
+       "2004-03-10 20:00:00     2.2       1402.0   88.000000       9.0          939.0   \n",
+       "2004-03-10 21:00:00     2.2       1376.0   80.000000       9.2          948.0   \n",
+       "2004-03-10 22:00:00     1.6       1272.0   51.000000       6.5          836.0   \n",
+       "...                     ...          ...         ...       ...            ...   \n",
+       "2005-04-04 10:00:00     3.1       1314.0  261.821642      13.5         1101.0   \n",
+       "2005-04-04 11:00:00     2.4       1163.0  264.415233      11.4         1027.0   \n",
+       "2005-04-04 12:00:00     2.4       1142.0  325.549398      12.4         1063.0   \n",
+       "2005-04-04 13:00:00     2.1       1003.0  315.044899       9.5          961.0   \n",
+       "2005-04-04 14:00:00     2.2       1071.0  336.854122      11.9         1047.0   \n",
+       "\n",
+       "                     NOx(GT)  PT08.S3(NOx)  NO2(GT)  PT08.S4(NO2)  \\\n",
+       "Timestamp                                                           \n",
+       "2004-03-10 18:00:00    166.0        1056.0    113.0        1692.0   \n",
+       "2004-03-10 19:00:00    103.0        1174.0     92.0        1559.0   \n",
+       "2004-03-10 20:00:00    131.0        1140.0    114.0        1555.0   \n",
+       "2004-03-10 21:00:00    172.0        1092.0    122.0        1584.0   \n",
+       "2004-03-10 22:00:00    131.0        1205.0    116.0        1490.0   \n",
+       "...                      ...           ...      ...           ...   \n",
+       "2005-04-04 10:00:00    472.0         539.0    190.0        1374.0   \n",
+       "2005-04-04 11:00:00    353.0         604.0    179.0        1264.0   \n",
+       "2005-04-04 12:00:00    293.0         603.0    175.0        1241.0   \n",
+       "2005-04-04 13:00:00    235.0         702.0    156.0        1041.0   \n",
+       "2005-04-04 14:00:00    265.0         654.0    168.0        1129.0   \n",
+       "\n",
+       "                     PT08.S5(O3)     T    RH      AH  \n",
+       "Timestamp                                             \n",
+       "2004-03-10 18:00:00       1268.0  13.6  48.9  0.7578  \n",
+       "2004-03-10 19:00:00        972.0  13.3  47.7  0.7255  \n",
+       "2004-03-10 20:00:00       1074.0  11.9  54.0  0.7502  \n",
+       "2004-03-10 21:00:00       1203.0  11.0  60.0  0.7867  \n",
+       "2004-03-10 22:00:00       1110.0  11.2  59.6  0.7888  \n",
+       "...                          ...   ...   ...     ...  \n",
+       "2005-04-04 10:00:00       1729.0  21.9  29.3  0.7568  \n",
+       "2005-04-04 11:00:00       1269.0  24.3  23.7  0.7119  \n",
+       "2005-04-04 12:00:00       1092.0  26.9  18.3  0.6406  \n",
+       "2005-04-04 13:00:00        770.0  28.3  13.5  0.5139  \n",
+       "2005-04-04 14:00:00        816.0  28.5  13.1  0.5028  \n",
+       "\n",
+       "[9357 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
     "\n",
@@ -33,54 +320,81 @@
     "\n",
     "    return df_ts\n",
     "\n",
-    "df = get_df()\n",
-    "columns = df.columns\n",
-    "nmask = df.isna()\n",
-    "nmask[df.index < '2005-01-01'] = False\n",
+    "def impute(df):\n",
+    "    columns = df.columns\n",
+    "    \n",
+    "    # we add back NaN unless we explicitly want imputed values\n",
+    "    add_back_nan = df.isna()\n",
     "\n",
-    "# lags = pd.concat([df.shift(i).add_suffix(f'_lag{i}') for i in [1,-1, 24, -24, 12, -12]], axis=1)\n",
-    "# df = pd.concat([df, lags], axis=1)\n",
+    "    gts = ['CO(GT)', 'C6H6(GT)', 'NOx(GT)', 'NO2(GT)', 'NMHC(GT)']\n",
+    "    add_back_nan.loc[df.index < '2005-01-01', gts] = False\n",
+    "    add_back_nan[['NMHC(GT)']] = False\n",
     "\n",
-    "# default bayesian ridge\n",
-    "model = IterativeImputer(random_state=0,max_iter=1000)\n",
-    "imputed = pd.DataFrame(model.fit_transform(df), columns=df.columns, index=df.index)[columns]\n",
+    "    # lags = pd.concat([df.shift(i).add_suffix(f'_lag{i}') for i in [1,-1]], axis=1)\n",
+    "    # df = pd.concat([df, lags], axis=1)\n",
     "\n",
-    "gts = ['CO(GT)', 'C6H6(GT)', 'NOx(GT)', 'NO2(GT)']#, 'NMHC(GT)']\n",
-    "for g in gts:\n",
-    "    imputed[g] = imputed[g].mask(nmask[g])\n",
+    "    # default bayesian ridge iterative imputer\n",
+    "    model = IterativeImputer(random_state=0,max_iter=1000)\n",
+    "    imputed = pd.DataFrame(model.fit_transform(df), columns=df.columns, index=df.index)[columns]\n",
     "\n",
-    "imputed.to_csv('output_data/imputed_all.csv')"
+    "    # post processing of imputed dataframe\n",
+    "    imputed.drop(filter(lambda x : 'lag_' in x, imputed.columns), axis=1)\n",
+    "    for col in imputed.columns:\n",
+    "        imputed.loc[(imputed[col] < 0.05).to_numpy(), col] = np.nan\n",
+    "    imputed = imputed.interpolate(method='time')\n",
+    "\n",
+    "    imputed[add_back_nan] = np.nan\n",
+    "\n",
+    "    # save result\n",
+    "    imputed.to_csv('output_data/imputed_all.csv')\n",
+    "    imputed.to_excel('output_data/imputed_all.xlsx')\n",
+    "    \n",
+    "    return imputed\n",
+    "\n",
+    "res = impute(get_df())\n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "d92558a3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Timestamp          0\n",
-       "CO(GT)            99\n",
-       "PT08.S1(CO)        0\n",
-       "NMHC(GT)           0\n",
-       "C6H6(GT)         138\n",
-       "PT08.S2(NMHC)      0\n",
-       "NOx(GT)           75\n",
-       "PT08.S3(NOx)       0\n",
-       "NO2(GT)           75\n",
-       "PT08.S4(NO2)       0\n",
-       "PT08.S5(O3)        0\n",
-       "T                  0\n",
-       "RH                 0\n",
-       "AH                 0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timestamp          0\n",
+      "CO(GT)            99\n",
+      "PT08.S1(CO)      366\n",
+      "NMHC(GT)           0\n",
+      "C6H6(GT)         138\n",
+      "PT08.S2(NMHC)    366\n",
+      "NOx(GT)           75\n",
+      "PT08.S3(NOx)     366\n",
+      "NO2(GT)           75\n",
+      "PT08.S4(NO2)     366\n",
+      "PT08.S5(O3)      366\n",
+      "T                366\n",
+      "RH               366\n",
+      "AH               366\n",
+      "dtype: int64\n",
+      "CO(GT)           1683\n",
+      "PT08.S1(CO)       366\n",
+      "NMHC(GT)         8443\n",
+      "C6H6(GT)          366\n",
+      "PT08.S2(NMHC)     366\n",
+      "NOx(GT)          1639\n",
+      "PT08.S3(NOx)      366\n",
+      "NO2(GT)          1642\n",
+      "PT08.S4(NO2)      366\n",
+      "PT08.S5(O3)       366\n",
+      "T                 366\n",
+      "RH                366\n",
+      "AH                366\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
@@ -88,13 +402,14 @@
     "imputed_df = pd.read_csv('output_data/imputed_all.csv', parse_dates=['Timestamp'])\n",
     "imputed_df_ts = imputed_df.set_index('Timestamp', drop=True)\n",
     "\n",
-    "imputed_df.isna().sum()\n"
+    "print(imputed_df.isna().sum())\n",
+    "print(get_df().isna().sum())\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
